# random

./: .gitignore  README.md
awk/: long-text.txt  obscure.awk  patterns.awk  program.awk  statements.awk
bash/: a.txt  alias-boolean.sh  args.sh  b.txt  dangerous-local.sh  echo-stderr.sh  example.sh  functions.sh  hero-cat.sh  iterate-over-args.sh  or.sh  pipe.sh  safe-local.sh  set-e-and-if.sh  trap-err-and-dont-exit.sh  trap.sh  variable-expansion.sh
bash-langauge-server/: README.md  package-lock.json  package.json
check-ascii/: check_ascii.py
deployables/: README.md  TODO.org
dotty/: gadt.scala  other-gadt-example.scala
electron-talks-to-docker/: README.md  docker.js  index.html  main.js  menubar-index.html  package-lock.json  package.json  webpack.config.js
emacs-in-docker/: Dockerfile  Makefile  README.md  entrypoint.sh  init.el  install-emacs.sh
gh/: Main.re  Makefile  README.md
gh-pr-check/: README.md  gh.install  gh.opam  jbuild
gnuplot/: data.txt  plot.txt  run.sh
hatch-dotty/: .gitignore  README.md  build.sbt
hatch-reason/: .gitignore  README.md  bsconfig.json  package.json
mads-hartmann-design-prototype/: index.css  index.html
merge-windows/: merge-windows.txt
models-in-articles/: Makefile  README.md
new/: .gitignore  Makefile  README.md  TODO.md  jbuild-workspace.dev  new.opam
nix/: add.nix
notes/: Makefile  index.css  index.html  index.js
ocaml-cli-tool/: Makefile  README.md
openai/: README.md  (+7 more)
reason-webserver/: .gitignore  README.md  jbuild-workspace.docker  webserver.opam
reason-webserver/lib/: hello.re  jbuild
(+246 files in other folders)
